--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 	<link rel="shortcut icon" href="/assets/favicon.png" />
 	<link rel="manifest" href="/assets/manifest.json" />
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body class="mdc-typography">
